--- a/gemini-clone/src/components/Main/Main.css
+++ b/gemini-clone/src/components/Main/Main.css
@@ -148,3 +148,29 @@
     align-items: start;
     gap: 20px;
 }
+
+.loader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.loader hr{
+    border-radius: 4px;
+    border: none;
+    background-color:#f6f7f8 ;
+    background: linear-gradient(to right, #e9c7ff, #ffffff, #fbaff6);
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 3s infinite linear;
+}
+
+@keyframes loader {
+    0%{
+        background-position: -800px 0px;
+    }
+    100%{
+        background-position: 800px 0px;
+    }
+}
