desing changes and updated send btn

--- a/gemini-clone/src/components/Main/Main.css
+++ b/gemini-clone/src/components/Main/Main.css
@@ -3,6 +3,7 @@
     min-height: 100vh;
     padding-bottom: 15vh;
     position: relative;
+    overflow-y: hidden;
 }
 
 .main .nav{
@@ -74,13 +75,14 @@
     background-color: #f1dff3;
 }
 
-.main-botton{
+.main-bottom{
     position: absolute;
     bottom: 0;
     width: 100%;
-    max-width: 900px;
+   
     padding: 0px 20px;
     margin: auto;
+    
 }
 
 .search-box{
@@ -91,6 +93,7 @@
     background-color: #f0f4f9;
     padding: 10px 20px;
     border-radius: 50px;
+    min-width: 100%;
 }
 
 .search-box img{
@@ -194,6 +197,6 @@
         padding: 5px 10px;
     }
     .search-box div{
-        gap : 5px;
+        gap:10px;
     }
 }
